--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ li {
     font-weight: 600;
     line-height: 1em;
     position: relative;
-    float: left;
+    float: center;
 }
 
 /*GREAT IDEAS BURN*/
